--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                     <div id="songListContainer" class="song-list-container">
                         
                         <div class="song-item" 
-                             data-src="/sound/DAM HA YEU THUONG - MASTER - DON CA.mp3" 
+                             data-src="https://on.soundcloud.com/Ps0io6b3MWfUrBY1bq" 
                              data-title="Đầm Hà Yêu Thương (Đơn ca)">
                             🎵 Đầm Hà Yêu Thương (Đơn ca)
                         </div>
@@ -748,4 +748,5 @@
     <div id = "last">Bản quyền © 2025 | Đoàn Thanh niên Cộng sản Hồ Chí Minh xã Đầm Hà</div>
     <script src="script.js"></script>
 </body>
+
 </html>
