--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                     <div id="songListContainer" class="song-list-container">
                         
                         <div class="song-item" 
-                             data-src="https://drive.google.com/file/d/1xfWHrg0Jm573i7qnCZIGN0O_czoYxYac/view?usp=sharing" 
+                             data-src="https://drive.google.com/uc?id=1xfWHrg0Jm573i7qnCZIGN0O_czoYxYac" 
                              data-title="Đầm Hà Yêu Thương (Đơn ca)">
                             🎵 Đầm Hà Yêu Thương (Đơn ca)
                         </div>
@@ -750,4 +750,5 @@
 </body>
 
 </html>
+
 
