--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <section class="video-section">
         <video controls autoplay loop muted>
-            <source src="/img/ĐẦM HÀ MIỀN ĐẤT DI SẢN, ĐIỂM ĐẾN TƯƠNG LAI.mp4" type="video/mp4">
+            <source src="https://www.youtube.com/watch?v=qTmB9mtoPFs" type="video/mp4">
                 Trình duyệt của bạn không hỗ trợ video.
         </video>
     </section>
@@ -750,6 +750,7 @@
 </body>
 
 </html>
+
 
 
 
