--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         </div>
         <div class="card" data-type="truonghoc" data-keywords="Mầm non Nhà trẻ">
             <div class="card-img">
-                <img src="/img/logodh.png">
+                <img src="/img/mamnondabinh.jpg">
             </div>
             <div class="card-text">
                 <h3>Trường mầm non Đại Bình</h3>
@@ -755,6 +755,7 @@
 </body>
 
 </html>
+
 
 
 
