Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <p>Thôn Trại Dinh, xã Đầm Hà, tỉnh Quảng Ninh</p>
             </div>
             <div class="card-footer">
-                <a class="map-btn" href="https://maps.app.goo.gl/satJAdPxPEnQXs9B6" target="_blank">Mở Google Maps</a>
+                <a class="map-btn" href="https://maps.app.goo.gl/HRAEwiiAmMc3FQb78?g_st=ipc" target="_blank">Mở Google Maps</a>
             </div>
         </div>
         <div class="card" data-type="hanhchinh">
@@ -777,6 +777,7 @@
 </body>
 
 </html>
+
 
 
 
