--- a/index.html
+++ b/index.html
@@ -340,14 +340,14 @@
         </div>
         <div class="card" data-type="hanhchinh">
             <div class="card-img">
-                <img src="/img/logodh.png">
+                <img src="/img/so10.jpg">
             </div>
             <div class="card-text">
                 <h3>Chi nhánh văn phòng đăng ký đất đai số 10</h3>
                 <p>Phố Lê Lương, xã Đầm Hà, tỉnh Quảng Ninh</p>
             </div>
             <div class="card-footer">
-                <a class="map-btn" href="#" target="_blank">Mở Google Maps</a>
+                <a class="map-btn" href="https://maps.app.goo.gl/Xc9EnPfDVzF3nxiC6" target="_blank">Mở Google Maps</a>
             </div>
         </div>
         <div class="card" data-type="hanhchinh">
@@ -777,6 +777,7 @@
 </body>
 
 </html>
+
 
 
 
