--- a/index.html
+++ b/index.html
@@ -240,6 +240,18 @@
                 <a class="map-btn" href="https://maps.app.goo.gl/m3KaJKQ9AjvvjTKG8?g_st=iz" target="_blank">Mở Google Maps</a>
             </div>
         </div>
+        <div class="card" data-type="thethao">
+            <div class="card-img">
+                <img src="/img/Sânpick.jpg">
+            </div>
+            <div class="card-text">
+                <h3>Sân thi đấu Pickleball Đầm Hà</h3>
+                <p>Phố Hà Quang Vóc, xã Đầm Hà, tỉnh Quảng Ninh</p>
+            </div>
+            <div class="card-footer">
+                <a class="map-btn" href="https://maps.app.goo.gl/mBdpiWkh2tbyXDc78" target="_blank">Mở Google Maps</a>
+            </div>
+        </div>
         <!--Nhà máy-->
         <div class="card" data-type="nhamay">
             <div class="card-img">
@@ -777,6 +789,7 @@
 </body>
 
 </html>
+
 
 
 
