--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <img src="/img/Sânpick.jpg">
             </div>
             <div class="card-text">
-                <h3>Sân thi đấu Pickleball Đầm Hà <br> Liên hệ đặt sân: 097 5102071 </h3>
+                <h3>Sân thi đấu Pickleball Đầm Hà <br> Đặt sân SĐT: 097 5102071 </h3>
                 <p>Phố Hà Quang Vóc, xã Đầm Hà, tỉnh Quảng Ninh</p>
             </div>
             <div class="card-footer">
@@ -789,6 +789,7 @@
 </body>
 
 </html>
+
 
 
 
