--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="video-section">
         <div class="video-player-container">
             <iframe 
-                src="https://www.youtube.com/embed/qTmB9mtoPFs?autoplay=1&loop=1&mute=1&playlist=qTmB9mtoPFs" 
+                src="https://www.youtube.com/watch?v=V1VzX5qUAp4" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -789,6 +789,7 @@
 </body>
 
 </html>
+
 
 
 
