--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <div class="search-bar">
             <input type="text" id="searchInput" placeholder="Tìm theo tên/địa chỉ...">
             <div class="custom-select" id="filterSelect">
+                <div class="selected">Tất cả</div>
                 <div class="options">
+                    <div data-value="all">Tất cả</div>
                     <div data-value="dulich">Du lịch</div>
                     <div data-value="nganhang">Ngân hàng</div>
                     <div data-value="thethao">Thể thao</div>
@@ -787,6 +789,7 @@
 </body>
 
 </html>
+
 
 
 
