--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                allowfullscreen playsinline>
+                allowfullscreen>
             </iframe>
         </div>
     </section>
@@ -789,6 +789,7 @@
 </body>
 
 </html>
+
 
 
 
